compiler/testData/cli/jvm/reportAllWarnings.out
compiler/testData/cli/jvm/reportAllWarnings.kt:1:26: error: unresolved reference 'g'.
fun foo(a: Int, b: Int) {g
                         ^
compiler/testData/cli/jvm/reportAllWarnings.kt:2:13: warning: division by zero.
    println(a / 0)
            ^^^^^
compiler/testData/cli/jvm/reportAllWarnings.kt:3:13: warning: division by zero.
    println(b / 0)
            ^^^^^
COMPILATION_ERROR
